welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
     vuBiscuit=true
              ^Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estSurBiscuit()) {
  ^