welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit=false
  for(x<-0 to 5) {
    if (estSurBiscuit()) {
      vuBiscuit=true
    }
    avance()
  }
  if (estSurBiscuit()) {
     vuBiscuit=true
  }
}